--- a/css/main_style.css
+++ b/css/main_style.css
@@ -1341,6 +1341,7 @@ footer .footer .footer-content .foot-con-4 h3 {
 .logo-bar .logo-bar-img img {
   width: 100%;
   height: 100%;
+  max-height:250px;
 }
 
 .logistics {
